Fix that the filter editor overlaps the dropdown menu

--- a/public/css/icinga/tabs.less
+++ b/public/css/icinga/tabs.less
@@ -73,6 +73,7 @@
   border-top: none;
   margin-left: -1px;
   min-width: 14em;
+  z-index: 1;
 }
 
 .tabs > .dropdown-nav-item > ul > li:hover > a {
